# TetsuoCode

./: README.md  build_exe.py  pyproject.toml
.github/workflows/: release.yml
doc/: tetsuo.txt
electron/: main.js  package-lock.json  package.json  preload.js  splash.html
lua/tetsuo/: api.lua  chat.lua  config.lua  context.lua  init.lua  inline.lua  sse.lua  tools.lua  utils.lua
lua/tetsuo/tools/: bash.lua  buffer.lua  file.lua  search.lua
plugin/: tetsuo.lua
vscode/: extension.js  package-lock.json  package.json
web/: app.py  cli.py
web/static/: app.js  style.css
web/templates/: index.html
